# traytoday

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  buffer.c  client.c  crc.c  file.c  main.c  meal.c  school.c  time.c  url.c
doc/reference/: allergens.md
include/: buffer.h  client.h  error.h  file.h  traytoday.h
include/info/: meal.h  school.h
include/utils/: color.h  crc32.h  time.h  url.h
src/: allergens.rs  client.rs  config.rs  lib.rs  main.rs
src/models/: meal.rs  mod.rs  school.rs
src/utils/: date.rs
