[package]
name = "traytoday"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
url = "2.5.4"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
termcolor = "1"
toml = "0.8.19"
home = "0.5.9"