[package]
name = "traytoday"
authors = ["urdekcah <ya@urdekcah.ru>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
readme = "README.md"
description = "A Rust program that provides a glance at today's school meal menu."
keywords = ["traytoday", "school", "meal"]
homepage = "https://github.com/urdekcah/traytoday/"
repository = "https://github.com/urdekcah/traytoday/"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
chrono = "0.4"
url = "2.5.4"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
termcolor = "1"
toml = "0.8.19"
home = "0.5.9"